fix overflow buf

--- a/style.less
+++ b/style.less
@@ -8,8 +8,7 @@ body, html, #drawZone {
   padding:0;
   
   font-size:3em;
-  
-  z-index:2000;
+  overflow:hidden;
   
 }
 #mainApp * {
